[tool.poetry]
name = "task-tracker"
version = "1.0.0"
description = "Task Tracker App"
authors = ["Y1-Bit <y0749701@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.114.2"
uvicorn = "^0.30.6"
sqlalchemy = "^2.0.34"
alembic = "^1.13.2"
psycopg2-binary = "^2.9.9"
python-multipart = "^0.0.9"
pydantic = "^2.9.1"
passlib = "^1.7.4"
python-jose = "^3.3.0"
celery = "^5.4.0"
redis = "^5.0.8"
aio-pika = "^9.4.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
